finsweet about page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse d-lg-flex d-md-block d-block justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav mb-2 mb-lg-0 pe-lg-2 pe-md-0 pe-0">
+                <div class="collapse navbar-collapse navbar-expand-lg" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 pe-lg-2 pe-md-0 pe-0">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Home</a>
                         </li>
@@ -174,9 +174,9 @@
         </section>
         <section id="team-section">
             <div class="container">
-                <div class="text-center p-5">
+                <div class="text-center">
                     <h2 class="fw-semibold">Meet Our Team</h2>
-                    <div class="row d-flex justify-content-between">
+                    <div class="row d-flex justify-content-lg-evenly justify-content-md-evenly justify-content-around">
                         <div class="card p-0 col-lg-3 col-md-3 col-4 m-3">
                             <img src="img/team (1).png" alt="team1" class="img-fluid">
                             <div class="card-body bg-dark text-white">
@@ -225,7 +225,7 @@
         </section>
         <section id="touch-section" class="row container-fluid" style="width: auto;"> 
             <div class="col-lg-2 col-md-3 col-12 p-0 white-car"></div>
-            <div class="col-lg-4 col-md-4 col-12 bg-success text-white p-5 align-content-lg-center">
+            <div class="col-lg-4 col-md-4 col-12 text-white p-5 align-content-lg-center" style="background-color: #FF6433;">
                 <h2 class="mt-4 mb-3">Get in touch with us for your service related query</h2> <a href="#" class="btn btn-lg text-white mt-4" style="background: #1E1B1B;">Contact Us</a>
             </div>
             <div class="col-lg-6 col-md-5 col-12 p-0 wire-s" ></div>
