--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
         <section id="about-section" class="container p-4">
             <div class="row">
                 <div class="mech col-lg-5 col-md-6">
-                    <!-- <img src="img/mechic.png" alt=""> -->
                 </div>
                 <div class="col-lg-7 col-md-6 p-5 text-white align-middle order-lg-last order-md-last order-first" style="background: #1E1B1B;">
                     <h1 class="fw-bold mt-5 mb-4" style="font-size: 64px;">About Us</h1>
@@ -57,9 +56,11 @@
                 </div>
             </div>
            <div class="row pt-5 my-5">
-            <div class="col-lg-7 col-md-7 pe-5">
-                <h2 class="fw-semibold fs-2">We Provide Expert Service and aim to have a long term with you</h2>
-                <p>We provide a full range of front end mechanical repairs for all makes and models of cars, no matter</p>
+            <div class="col-lg-7 col-md-7 pe-lg-5 pe-md-4 col-12">
+                <div class="col-lg-9 col-12">
+                    <h2 class="fw-semibold fs-2">We Provide Expert Service and aim to have a long term with you</h2>
+                    <p>We provide a full range of front end mechanical repairs for all makes and models of cars, no matter</p>
+                </div>
                 <ul style="list-style: none;">
                     <li class="d-flex">
                         <div class="text-center">
@@ -68,7 +69,7 @@
                                 <img src="img/lines.png" alt="lines">
                             </div>
                         </div>
-                        <div class="ms-2 col-8">
+                        <div class="ms-3 pt-2 col-8">
                             <h4 class="fw-semibold">Get a Quote</h4>
                             <p>Through True Rich Attended does no end it his mother since real had half every.</p>
                         </div>
@@ -81,7 +82,7 @@
                                     <img src="img/lines.png" alt="lines">
                                 </div>
                             </div>
-                            <div class="ms-2 col-8">
+                            <div class="ms-3 pt-2 col-8">
                                 <h4 class="fw-semibold">Book an Appointment</h4>
                                 <p>Through True Rich Attended does no end it his mother since real.</p>
                             </div>
@@ -92,7 +93,7 @@
                             <div>
                                 <img class="mt-2" src="img/03.png" alt="03">
                             </div>
-                            <div class="ms-2 col-8">
+                            <div class="ms-3 pt-2 col-8">
                                 <h4 class="fw-semibold">Get your Service Done</h4>
                                 <p>Ecstatic unsatiable saw his giving Remain expense you position concluded.</p>
                             </div>
