--- a/index.html
+++ b/index.html
@@ -108,21 +108,21 @@
         </section>
         <section id="box-section" class="container-fluid">
             <div class="row align-items-center text-white">
-                <div class="col-lg col-md col-12 p-5 box1" style="background: #FF6433;">
+                <div class="col-lg-4 col-md-4 col-12 p-5 box1" style="background: #FF6433;">
                        <div class="my-lg-5 my-lg-3">
                             <h3 class="mb-3">Serve our customers and always deliver the customer service</h3>
                             <p>We provide a full range of front end mechanical repairs for all makes and models of cars, no matter the cause. This
                             includes</p>
                        </div>
                 </div>
-                <div class="col-lg col-md col-12 p-5" style="background: #1E1B1B;">
+                <div class="col-lg-4 col-md-4 col-12 p-5" style="background: #1E1B1B;">
                         <div class="my-lg-5 my-lg-3"> 
                             <h3 class="mb-3">To be the world’s most eader in automotive business solutions.</h3>
                             <p>We provide a full range of front end mechanical repairs for all makes and models of cars, no matter the cause. This
                                 includes</p>
                         </div>
                 </div>
-                <div class="col-lg col-md col-12 p-5" style="background: #7443CAE5;">
+                <div class="col-lg-4 col-md-4 col-12 p-5" style="background: #7443CAE5;">
                         <div class="my-lg-5 my-lg-3">
                             <h3 class="mb-3">We value the service we provide and our loyal returning customers</h3>
                             <p>We provide a full range of front end mechanical repairs for all makes and models of cars, no matter the cause. This
