finsweet about page

--- a/index.html
+++ b/index.html
@@ -224,12 +224,13 @@
                     </div>
                    </div>
         </section>
-        <section id="touch-section" class="row container-fluid" style="width: auto;"> 
-            <div class="col-lg-2 col-md-3 col-12 p-0 white-car"></div>
-            <div class="col-lg-4 col-md-4 col-12 text-white p-5 align-content-lg-center" style="background-color: #FF6433;">
-                <h2 class="mt-4 mb-3">Get in touch with us for your service related query</h2> <a href="#" class="btn btn-lg text-white mt-4" style="background: #1E1B1B;">Contact Us</a>
-            </div>
-            <div class="col-lg-6 col-md-5 col-12 p-0 wire-s" ></div>
+        <section id="touch-section" class="row container-fluid p-0 px-0"> 
+                <div class="col-lg-2 col-md-3 col-12 white-car"></div>
+                <div class="col-lg-4 col-md-4 col-12 text-white p-5 align-content-lg-center" style="background-color: #FF6433;">
+                    <h2 class="mt-4 mb-3">Get in touch with us for your service related query</h2> <a href="#"
+                        class="btn btn-lg text-white mt-4" style="background: #1E1B1B;">Contact Us</a>
+                </div>
+                <div class="col-lg-6 col-md-5 col-12 wire-s pe-2"></div>
         </section>
     </main>
     <footer>
