--- a/index.html
+++ b/index.html
@@ -108,23 +108,23 @@
         </section>
         <section id="box-section" class="container-fluid">
             <div class="row align-items-center text-white">
-                <div class="col-lg-4 col-md-4 col-12 p-5 box1" style="background: #FF6433; height: auto;">
+                <div class="col-lg-4 col-md-4 col-12 p-5 vh-100" style="background: #FF6433; height: auto;">
                        <div class="my-lg-5 my-lg-3">
                             <h3 class="mb-2">Serve our customers and always deliver the customer service</h3>
                             <p>We provide a full range of front end mechanical repairs for all makes and models of cars, no matter the cause. This
                             includes</p>
                        </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-12 p-5" style="background: #1E1B1B; height: auto;">
+                <div class="col-lg-4 col-md-4 col-12 p-5 vh-100" style="background: #1E1B1B; height: auto;">
                         <div class="my-lg-5 my-lg-3"> 
                             <h3 class="mb-2">To be the world’s most eader in automotive business solutions.</h3>
                             <p>We provide a full range of front end mechanical repairs for all makes and models of cars, no matter the cause. This
                                 includes</p>
                         </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-12 p-5" style="background: #7443CAE5; height: auto;">
+                <div class="col-lg-4 col-md-4 col-12 p-5 vh-100" style="background: #7443CAE5; height: auto;">
                         <div class="my-lg-5 my-lg-3">
-                            <h3 class="mb-2">We value the service we provide and our loyal customers</h3>
+                            <h3 class="mb-2">We value the service we provide and our loyal returning customers</h3>
                             <p>We provide a full range of front end mechanical repairs for all makes and models of cars, no matter the cause. This
                                 includes</p>
                         </div>
@@ -179,42 +179,42 @@
                 </div>
                    <div class="container">
                     <div class="row d-flex justify-content-center text-center">
-                        <div class="card p-0 col-lg-3 col-md-3 col-4 m-3">
+                        <div class="card p-0 col-lg-3 col-md-3 col-10 m-3">
                             <img src="img/team (1).png" alt="team1" class="img-fluid">
                             <div class="card-body bg-dark text-white">
                                 <h5>Javena Melo</h5>
                                 <p>Founder, Director</p>
                             </div>
                         </div>
-                        <div class="card p-0 col-lg-3 col-md-3 col-4 m-3">
+                        <div class="card p-0 col-lg-3 col-md-3 col-10 m-3">
                             <img src="img/team (6).png" alt="team6" class="img-fluid">
                             <div class="card-body bg-dark text-white">
                                 <h5>Paul Honson</h5>
                                 <p>Head Technician</p>
                             </div>
                         </div>
-                        <div class="card p-0 col-lg-3 col-md-3 col-4 m-3">
+                        <div class="card p-0 col-lg-3 col-md-3 col-10 m-3">
                             <img src="img/team (5).png" alt="team5" class="img-fluid">
                             <div class="card-body bg-dark text-white">
                                 <h5>Devon Lane</h5>
                                 <p>Technician</p>
                             </div>
                         </div>
-                        <div class="card p-0 col-lg-3 col-md-3 col-4 m-3">
+                        <div class="card p-0 col-lg-3 col-md-3 col-10 m-3">
                             <img src="img/team (3).png" alt="team3" class="img-fluid">
                             <div class="card-body bg-dark text-white">
                                 <h5>Jalen Davies</h5>
                                 <p>Marketing Manager</p>
                             </div>
                         </div>
-                        <div class="card p-0 col-lg-3 col-md-3 col-4 m-3">
+                        <div class="card p-0 col-lg-3 col-md-3 col-10 m-3">
                             <img src="img/team (4).png" alt="team4" class="img-fluid">
                             <div class="card-body bg-dark text-white">
                                 <h5>Kylee Danford</h5>
                                 <p>Sales Manager</p>
                             </div>
                         </div>
-                        <div class="card p-0 col-lg-3 col-md-3 col-4 m-3">
+                        <div class="card p-0 col-lg-3 col-md-3 col-10 m-3">
                             <img src="img/team (2).png" alt="team2" class="img-fluid">
                             <div class="card-body bg-dark text-white">
                                 <h5>Luisa Wilson</h5>
