--- a/index.html
+++ b/index.html
@@ -108,23 +108,23 @@
         </section>
         <section id="box-section" class="container-fluid">
             <div class="row align-items-center text-white">
-                <div class="col-lg-4 col-md-4 col-12 p-5 vh-100" style="background: #FF6433; height: auto;">
+                <div class="col-lg-4 col-md-4 col-12 p-5" style="background: #FF6433; height: 440px;">
                        <div class="my-lg-5 my-lg-3">
-                            <h3 class="mb-2">Serve our customers and always deliver the customer service</h3>
+                            <h3 class="mb-4">Serve our customers and always deliver the customer service</h3>
                             <p>We provide a full range of front end mechanical repairs for all makes and models of cars, no matter the cause. This
                             includes</p>
                        </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-12 p-5 vh-100" style="background: #1E1B1B; height: auto;">
+                <div class="col-lg-4 col-md-4 col-12 p-5" style="background: #1E1B1B; height: 440px;">
                         <div class="my-lg-5 my-lg-3"> 
-                            <h3 class="mb-2">To be the world’s most eader in automotive business solutions.</h3>
+                            <h3 class="mb-4">To be the world’s most eader in automotive business solutions.</h3>
                             <p>We provide a full range of front end mechanical repairs for all makes and models of cars, no matter the cause. This
                                 includes</p>
                         </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-12 p-5 vh-100" style="background: #7443CAE5; height: auto;">
+                <div class="col-lg-4 col-md-4 col-12 p-5" style="background: #7443CAE5; height: 440px;">
                         <div class="my-lg-5 my-lg-3">
-                            <h3 class="mb-2">We value the service we provide and our loyal returning customers</h3>
+                            <h3 class="mb-4">We value the service we provide and our loyal returning customers</h3>
                             <p>We provide a full range of front end mechanical repairs for all makes and models of cars, no matter the cause. This
                                 includes</p>
                         </div>
